--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,7 +10,7 @@ on:
     inputs:
       destroy:
         description: "Set to true to destroy infrastructure"
-        required: false
+        required: true
         default: "true"
 
 env:
