--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,8 +10,8 @@ on:
     inputs:
       destroy:
         description: "Set to true to destroy infrastructure"
-        required: false
-        default: "false"
+        required: true
+        default: "true"
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
